GCodeParser.py
# Generated from GCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GCodeParser ( Parser ):

    grammarFileName = "GCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'M30'", "<INVALID>", "<INVALID>", 
                     "'P'", "'N'", "'T'", "'VAR'", "'FUNC'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'-'", "'='", "'{'", "'}'", 
                     "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "GCODE", "M30", "DIR", "DELTA", "P", 
                      "N", "T", "VAR", "FUNC", "FLOAT", "INT", "ID", "MINUS", 
                      "ASSIGN", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "COMMA", "LINE_END", "WS" ]

    RULE_program = 0
    RULE_programEnd = 1
    RULE_declaration = 2
    RULE_statement = 3
    RULE_detail = 4
    RULE_lineNumber = 5
    RULE_codFunc = 6
    RULE_coord = 7
    RULE_delta_center = 8
    RULE_stop_ms = 9
    RULE_variable = 10
    RULE_function = 11
    RULE_parameterList = 12
    RULE_parameter = 13

    ruleNames =  [ "program", "programEnd", "declaration", "statement", 
                   "detail", "lineNumber", "codFunc", "coord", "delta_center", 
                   "stop_ms", "variable", "function", "parameterList", "parameter" ]

    EOF = Token.EOF
    GCODE=1
    M30=2
    DIR=3
    DELTA=4
    P=5
    N=6
    T=7
    VAR=8
    FUNC=9
    FLOAT=10
    INT=11
    ID=12
    MINUS=13
    ASSIGN=14
    LBRACE=15
    RBRACE=16
    LPAREN=17
    RPAREN=18
    COMMA=19
    LINE_END=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programEnd(self):
            return self.getTypedRuleContext(GCodeParser.ProgramEndContext,0)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GCodeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(GCodeParser.DeclarationContext,i)


        def getRuleIndex(self):
            return GCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = GCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 832) != 0):
                self.state = 28
                self.declaration()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.programEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramEndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def M30(self):
            return self.getToken(GCodeParser.M30, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_programEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramEnd" ):
                listener.enterProgramEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramEnd" ):
                listener.exitProgramEnd(self)




    def programEnd(self):

        localctx = GCodeParser.ProgramEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(GCodeParser.M30)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(GCodeParser.VariableContext,0)


        def statement(self):
            return self.getTypedRuleContext(GCodeParser.StatementContext,0)


        def function(self):
            return self.getTypedRuleContext(GCodeParser.FunctionContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = GCodeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.variable()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.statement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lineNumber(self):
            return self.getTypedRuleContext(GCodeParser.LineNumberContext,0)


        def codFunc(self):
            return self.getTypedRuleContext(GCodeParser.CodFuncContext,0)


        def LINE_END(self):
            return self.getToken(GCodeParser.LINE_END, 0)

        def detail(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GCodeParser.DetailContext)
            else:
                return self.getTypedRuleContext(GCodeParser.DetailContext,i)


        def getRuleIndex(self):
            return GCodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.lineNumber()
            self.state = 44
            self.codFunc()
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0):
                self.state = 45
                self.detail()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(GCodeParser.LINE_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DetailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coord(self):
            return self.getTypedRuleContext(GCodeParser.CoordContext,0)


        def delta_center(self):
            return self.getTypedRuleContext(GCodeParser.Delta_centerContext,0)


        def stop_ms(self):
            return self.getTypedRuleContext(GCodeParser.Stop_msContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_detail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDetail" ):
                listener.enterDetail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDetail" ):
                listener.exitDetail(self)




    def detail(self):

        localctx = GCodeParser.DetailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_detail)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.coord()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.delta_center()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.stop_ms()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineNumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def N(self):
            return self.getToken(GCodeParser.N, 0)

        def INT(self):
            return self.getToken(GCodeParser.INT, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_lineNumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineNumber" ):
                listener.enterLineNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineNumber" ):
                listener.exitLineNumber(self)




    def lineNumber(self):

        localctx = GCodeParser.LineNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lineNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(GCodeParser.N)
            self.state = 59
            self.match(GCodeParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GCODE(self):
            return self.getToken(GCodeParser.GCODE, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_codFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodFunc" ):
                listener.enterCodFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodFunc" ):
                listener.exitCodFunc(self)




    def codFunc(self):

        localctx = GCodeParser.CodFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_codFunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(GCodeParser.GCODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIR(self):
            return self.getToken(GCodeParser.DIR, 0)

        def FLOAT(self):
            return self.getToken(GCodeParser.FLOAT, 0)

        def INT(self):
            return self.getToken(GCodeParser.INT, 0)

        def MINUS(self):
            return self.getToken(GCodeParser.MINUS, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_coord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoord" ):
                listener.enterCoord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoord" ):
                listener.exitCoord(self)




    def coord(self):

        localctx = GCodeParser.CoordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_coord)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(GCodeParser.DIR)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 64
                self.match(GCodeParser.MINUS)


            self.state = 67
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delta_centerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELTA(self):
            return self.getToken(GCodeParser.DELTA, 0)

        def FLOAT(self):
            return self.getToken(GCodeParser.FLOAT, 0)

        def INT(self):
            return self.getToken(GCodeParser.INT, 0)

        def MINUS(self):
            return self.getToken(GCodeParser.MINUS, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_delta_center

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelta_center" ):
                listener.enterDelta_center(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelta_center" ):
                listener.exitDelta_center(self)




    def delta_center(self):

        localctx = GCodeParser.Delta_centerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_delta_center)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(GCodeParser.DELTA)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 70
                self.match(GCodeParser.MINUS)


            self.state = 73
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stop_msContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def P(self):
            return self.getToken(GCodeParser.P, 0)

        def INT(self):
            return self.getToken(GCodeParser.INT, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_stop_ms

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStop_ms" ):
                listener.enterStop_ms(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStop_ms" ):
                listener.exitStop_ms(self)




    def stop_ms(self):

        localctx = GCodeParser.Stop_msContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stop_ms)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(GCodeParser.P)
            self.state = 76
            self.match(GCodeParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GCodeParser.VAR, 0)

        def ID(self):
            return self.getToken(GCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(GCodeParser.ASSIGN, 0)

        def LINE_END(self):
            return self.getToken(GCodeParser.LINE_END, 0)

        def FLOAT(self):
            return self.getToken(GCodeParser.FLOAT, 0)

        def INT(self):
            return self.getToken(GCodeParser.INT, 0)

        def MINUS(self):
            return self.getToken(GCodeParser.MINUS, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = GCodeParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(GCodeParser.VAR)
            self.state = 79
            self.match(GCodeParser.ID)
            self.state = 80
            self.match(GCodeParser.ASSIGN)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 81
                self.match(GCodeParser.MINUS)


            self.state = 84
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 85
            self.match(GCodeParser.LINE_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(GCodeParser.FUNC, 0)

        def ID(self):
            return self.getToken(GCodeParser.ID, 0)

        def LPAREN(self):
            return self.getToken(GCodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(GCodeParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(GCodeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(GCodeParser.RBRACE, 0)

        def parameterList(self):
            return self.getTypedRuleContext(GCodeParser.ParameterListContext,0)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GCodeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(GCodeParser.DeclarationContext,i)


        def getRuleIndex(self):
            return GCodeParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = GCodeParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(GCodeParser.FUNC)
            self.state = 88
            self.match(GCodeParser.ID)
            self.state = 89
            self.match(GCodeParser.LPAREN)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 90
                self.parameterList()


            self.state = 93
            self.match(GCodeParser.RPAREN)
            self.state = 94
            self.match(GCodeParser.LBRACE)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 832) != 0):
                self.state = 95
                self.declaration()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(GCodeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GCodeParser.ParameterContext)
            else:
                return self.getTypedRuleContext(GCodeParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GCodeParser.COMMA)
            else:
                return self.getToken(GCodeParser.COMMA, i)

        def getRuleIndex(self):
            return GCodeParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = GCodeParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.parameter()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 104
                self.match(GCodeParser.COMMA)
                self.state = 105
                self.parameter()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(GCodeParser.ASSIGN, 0)

        def FLOAT(self):
            return self.getToken(GCodeParser.FLOAT, 0)

        def INT(self):
            return self.getToken(GCodeParser.INT, 0)

        def MINUS(self):
            return self.getToken(GCodeParser.MINUS, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = GCodeParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(GCodeParser.ID)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 112
                self.match(GCodeParser.ASSIGN)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 113
                    self.match(GCodeParser.MINUS)


                self.state = 116
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





